2008-08-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed writable check when socket's send buffer is full in BitTorrent
	downloads to lower CPU usage.
	* src/PeerInteractionCommand.cc

2008-07-31  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed broken gzip inflation.
	Turn off segmented downloading if gzip content is smaller than or equal
	to 1MiB and inflate the data on the fly, because HTTP response header
	doesn't contain the length of inflated file we can't determin where
	the chunk of data should be written.
	On the other hand, if gzip content is larger than 1MB, then turn off
	on the fly inflation, because some servers returns "content-type: gzip"
	for *.tgz, *.gz files.
	* src/DownloadCommand.cc
	* src/HttpResponseCommand.cc
	* src/HttpResponseCommand.h

2008-07-31  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Applied tizianomueller's patch to fix compile error.
	* test/BitfieldManTest.cc
	* test/BtRequestMessageTest.cc
	* test/DefaultBtContextTest.cc
	* test/DefaultDiskWriterTest.cc
	* test/DefaultPieceStorageTest.cc
	* test/HttpHeaderProcessorTest.cc
	* test/HttpResponseTest.cc
	* test/Metalink2RequestGroupTest.cc
	* test/MetalinkParserControllerTest.cc
	* test/MetalinkProcessorTest.cc
	* test/PeerSessionResourceTest.cc
	* test/UtilTest.cc

2008-07-23  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* Release 0.15.0

2008-07-23  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Reordered src files in POTFILES.in so that usage text appears first.
	* po/POTFILES.in
	
2008-07-23  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Bump up version number to 0.15.0
	* configure.ac

2008-07-23  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added Bulgarian translation.
	Updated Catalan, Spanish, French and Japanese translations.
	Thanks to all translators.
	* po/LINGUAS
	* po/bg.po
	* po/ca.po
	* po/es.po
	* po/fr.po
	* po/ja.po
	
2008-07-23  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
